# OperatingSystemHW

./: .gitignore  CMakeLists.txt
CPU_Dispatch/: CPUManager.py  __init__.py  data.txt  main.py
LinuxHomeWork/Week_8th/: mytest.sh  patch.py
ProcessConnect/headers/: chatbox.h
ProcessConnect/sources/: chatbox.cpp  child_main.cpp  main.cpp
ProcessConnect_Clipboard/: CMakeLists.txt
ProcessConnect_Clipboard/sources/: child.cpp  main.cpp
ProcessConnect_SharedMemory/: CMakeLists.txt
ProcessConnect_SharedMemory/sources/: child_main.cpp
ProcessInMemory/: CMakeLists.txt  main.cpp
